--- a/iam20680/sensors/linux/test-sensors-hal/Makefile
+++ b/iam20680/sensors/linux/test-sensors-hal/Makefile
@@ -7,14 +7,23 @@ HAL_SRC_DIR := ../..
 
 # Sensors HAL version
 INV_SENSORS_HAL_VERSION_MAJOR := 8
-INV_SENSORS_HAL_VERSION_MINOR := 0
-INV_SENSORS_HAL_VERSION_PATCH := 0
-INV_SENSORS_HAL_VERSION_SUFFIX := -simple-test2
+INV_SENSORS_HAL_VERSION_MINOR := 1
+INV_SENSORS_HAL_VERSION_PATCH := 5
+INV_SENSORS_HAL_VERSION_SUFFIX := -simple-android-linux-test1
 $(info InvenSense Sensors HAL version MA-$(INV_SENSORS_HAL_VERSION_MAJOR).$(INV_SENSORS_HAL_VERSION_MINOR).$(INV_SENSORS_HAL_VERSION_PATCH)$(INV_SENSORS_HAL_VERSION_SUFFIX))
 CPPFLAGS += -DINV_SENSORS_HAL_VERSION_MAJOR=$(INV_SENSORS_HAL_VERSION_MAJOR)
 CPPFLAGS += -DINV_SENSORS_HAL_VERSION_MINOR=$(INV_SENSORS_HAL_VERSION_MINOR)
 CPPFLAGS += -DINV_SENSORS_HAL_VERSION_PATCH=$(INV_SENSORS_HAL_VERSION_PATCH)
 CPPFLAGS += -DINV_SENSORS_HAL_VERSION_SUFFIX=\"$(INV_SENSORS_HAL_VERSION_SUFFIX)\"
+
+# InvenSense chip type
+INVENSENSE_CHIP ?= iam20680
+$(info InvenSense chip $(INVENSENSE_CHIP))
+
+# Batching support
+ifneq (,$(filter $(INVENSENSE_CHIP), iam20680))
+CPPFLAGS += -DBATCH_MODE_SUPPORT
+endif
 
 # Compass support
 COMPASS_SUPPORT := false
