--- a/iam20680/sensors/linux/test-sensors-hal/Makefile
+++ b/iam20680/sensors/linux/test-sensors-hal/Makefile
@@ -9,8 +9,8 @@ INVENSENSE_CHIP ?= iam20680
 # Sensors HAL version
 INV_SENSORS_HAL_VERSION_MAJOR := 9
 INV_SENSORS_HAL_VERSION_MINOR := 1
-INV_SENSORS_HAL_VERSION_PATCH := 1
-INV_SENSORS_HAL_VERSION_SUFFIX := -simple-android-linux-test1
+INV_SENSORS_HAL_VERSION_PATCH := 2
+INV_SENSORS_HAL_VERSION_SUFFIX := -simple-android-linux
 $(info InvenSense Sensors HAL version MA-$(INV_SENSORS_HAL_VERSION_MAJOR).$(INV_SENSORS_HAL_VERSION_MINOR).$(INV_SENSORS_HAL_VERSION_PATCH)$(INV_SENSORS_HAL_VERSION_SUFFIX))
 
 # Batching support
