IAM-20680 MA-Lite 13.0.0
Sensors HAL version:
* 13.1.0-simple

Supported Android versions:
* Android 9, 10, 11, 12, 13

Supported Android sensor types:
* Gyroscope (no calibration)
* Accelerometer (no calibration)
* Magnetometer (no calibration)
* Pressure

Supported TDK-InvenSense Sensors:
* IAM-20680

Changelog:
* Clean and fix termination of HAL
* Fix flush vector and prevent flush when sensor is off
* Add API 1.4 support
* Use 16G accel FSR for Hi-Fi sensors
* Use 250dps for gyro FSR for Automotive
* Add batch support
* Add Additional Info frames (sensor placement + internal temperature)
* Report internal temperature periodically (10Hz)
* Use standard android calibrated sensors for reporting data

--- a/iam20680/sensors/linux/test-sensors-hal/Makefile
+++ b/iam20680/sensors/linux/test-sensors-hal/Makefile
@@ -12,7 +12,7 @@ CXX_STL = -lstdc++
 endif
 
 # Common flags
-CPPFLAGS += -DLOG_TAG=\"Sensors\"
+CPPFLAGS += -DLOG_TAG=\"InvnSensors\"
 CPPFLAGS += -Iandroid_linux -D_HW_DONT_INCLUDE_CORE_
 CPPFLAGS += $(foreach inc, $(INV_INCLUDES), -I$(HAL_SRC_DIR)/$(inc))
 COMMON_FLAGS += -O2
